# steamos-manager

./: .gitlab-ci.yml  Cargo.toml  Makefile  README.md  com.steampowered.SteamOSManager1.xml
data/: platform.toml  test-orca-settings.conf
data/devices/: jupiter.toml  rog-ally-series.toml  zotac-gaming-zone.toml
data/user/: orca.service  steamos-manager.service
src/: hardware.rs  inputplumber.rs  lib.rs  platform.rs  power.rs  screenreader.rs  systemd.rs  testing.rs  wifi.rs
src/daemon/: root.rs  user.rs
src/manager/: root.rs  user.rs
src/proxy/: low_power_mode1.rs  manager2.rs  mod.rs  performance_profile1.rs  screenreader0.rs
src/sls/: ftrace.rs
