[package]
name = "steamos-manager"
version = "25.5.5"
edition = "2021"
repository = "https://gitlab.steamos.cloud/holo/steamos-manager/"

[profile.release]
strip="symbols"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
config = { version = "0.15", default-features = false, features = ["async", "ini", "toml"] }
gio = "0.20"
inotify = { version = "0.11", default-features = false, features = ["stream"] }
input-linux = "0.7"
itertools = "0.14"
lazy_static = "1"
libc = "0.2"
nix = { version = "0.30", default-features = false, features = ["fs", "poll", "signal"] }
num_enum = "0.7"
regex = "1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = "0.8"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
udev = { version = "^0.9.3", features = ["send", "sync"] }
xdg = "3.0"
zbus = { version = "5", default-features = false, features = ["tokio"] }
zbus_xml = "5"
